--- a/index.html
+++ b/index.html
@@ -2,8 +2,88 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather Forecast</title>
+    <title>Weather app</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Passions+Conflict&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="weather-app">
+        <div class="weather-app-wrapper">
+          <form id="search-form" class="mb-3">
+            <div class="row">
+              <div class="col-9">
+                <input
+                  type="search"
+                  class="form-control"
+                  id="formGroupExampleInput"
+                  placeholder="Search for a city"
+                  autocomplete="off"
+                />
+              </div>
+              <div class="col-3">
+                <input
+                  value="Search"
+                  type="submit"
+                  class="btn btn-primary w-100"
+                />
+              </div>
+            </div>
+          </form>
+          <br />
+          <div class="overview">
+            <h1 id="current-city">Vancouver</h1>
+          </div>
+
+          <div class="row">
+            <div class="col-6">
+              <div class="d-flex weather-temperature">
+                <img
+                  src="//cdn.weatherapi.com/weather/64x64/night/296.png"
+                  alt="Clear"
+                  id="icon"
+                />
+                <div>
+                  <strong id="temperature">12</strong
+                  ><span class="units"> °C </span>
+                </div>
+              </div>
+
+              <ul>
+                <li><span id="date-time"></span></li>
+                <li id="current-condition">Cloudy</li>
+              </ul>
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span> km/h</li>
+              </ul>
+            </div>
+          </div>
+          <br />
+          <div class="weather-forecast" id="forecast"></div>
+        </div>
+      </div>
+      <small>
+        <a href="#" target="_blank">Open-source code</a>
+        by Analivia Costa
+      </small>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
