add forecast html

--- a/index.html
+++ b/index.html
@@ -76,11 +76,104 @@
             </div>
           </div>
           <br />
-          <div class="weather-forecast" id="forecast"></div>
+          <div class="weather-forecast" id="forecast">
+            <div class="container-forecast">
+              <div class="row row-cols-5">
+                <div class="col">
+                  <p id="weekday">Mon</p>
+                  <img
+                    src="//cdn.weatherapi.com/weather/64x64/night/296.png"
+                    alt="Clear"
+                    id="icon"
+                  />
+                  <div class="min-max-container">
+                    <div class="row row-cols-2">
+                      <strong id="minTemp" class="col"> °C</strong>
+                      <p id="maxTemp" class="col">°C</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <p id="weekday">Mon</p>
+                  <img
+                    src="//cdn.weatherapi.com/weather/64x64/night/296.png"
+                    alt="Clear"
+                    id="icon"
+                  />
+                  <div class="min-max-container">
+                    <div class="row row-cols-2">
+                      <strong id="minTemp" class="col"> °C</strong>
+                      <p id="maxTemp" class="col">°C</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <p id="weekday">Mon</p>
+                  <img
+                    src="//cdn.weatherapi.com/weather/64x64/night/296.png"
+                    alt="Clear"
+                    id="icon"
+                  />
+                  <div class="min-max-container">
+                    <div class="row row-cols-2">
+                      <strong id="minTemp" class="col"> °C</strong>
+                      <p id="maxTemp" class="col">°C</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <p id="weekday">Mon</p>
+                  <img
+                    src="//cdn.weatherapi.com/weather/64x64/night/296.png"
+                    alt="Clear"
+                    id="icon"
+                  />
+                  <div class="min-max-container">
+                    <div class="row row-cols-2">
+                      <strong id="minTemp" class="col"> °C</strong>
+                      <p id="maxTemp" class="col">°C</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <p id="weekday">Mon</p>
+                  <img
+                    src="//cdn.weatherapi.com/weather/64x64/night/296.png"
+                    alt="Clear"
+                    id="icon"
+                  />
+                  <div class="min-max-container">
+                    <div class="row row-cols-2">
+                      <strong id="minTemp" class="col"> °C</strong>
+                      <p id="maxTemp" class="col">°C</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <p id="weekday">Mon</p>
+                  <img
+                    src="//cdn.weatherapi.com/weather/64x64/night/296.png"
+                    alt="Clear"
+                    id="icon"
+                  />
+                  <div class="min-max-container">
+                    <div class="row row-cols-2">
+                      <strong id="minTemp" class="col"> °C</strong>
+                      <p id="maxTemp" class="col">°C</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <small>
-        <a href="#" target="_blank">Open-source code</a>
+        <a
+          href="https://github.com/analiviag/weather-application"
+          target="_blank"
+          >Open-source code</a
+        >
         by Analivia Costa
       </small>
     </div>
