--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather app</title>
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
 
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
+    <div class="container-md">
       <div class="weather-app">
         <div class="weather-app-wrapper">
           <form id="search-form" class="mb-3">
@@ -64,7 +64,7 @@
               </div>
 
               <ul>
-                <li><span id="date-time"></span></li>
+                <li><span id="date-time">2025-03-28 11:20</span></li>
                 <li id="current-condition">Cloudy</li>
               </ul>
             </div>
@@ -78,88 +78,46 @@
           <br />
           <div class="weather-forecast" id="forecast">
             <div class="container-forecast">
-              <div class="row row-cols-5">
+              <div class="row row-cols-3">
                 <div class="col">
-                  <p id="weekday">Mon</p>
+                  <p id="weekday" class="day-of-week">Mon</p>
                   <img
                     src="//cdn.weatherapi.com/weather/64x64/night/296.png"
                     alt="Clear"
                     id="icon"
                   />
                   <div class="min-max-container">
-                    <div class="row row-cols-2">
-                      <strong id="minTemp" class="col"> °C</strong>
-                      <p id="maxTemp" class="col">°C</p>
+                    <div class="row row-cols-2 gx-0">
+                      <p id="minTemp" class="col p-3">7°C</p>
+                      <strong id="maxTemp" class="col p-3">°16C</strong>
                     </div>
                   </div>
                 </div>
                 <div class="col">
-                  <p id="weekday">Mon</p>
+                  <p id="weekday" class="day-of-week">Mon</p>
                   <img
                     src="//cdn.weatherapi.com/weather/64x64/night/296.png"
                     alt="Clear"
                     id="icon"
                   />
                   <div class="min-max-container">
-                    <div class="row row-cols-2">
-                      <strong id="minTemp" class="col"> °C</strong>
-                      <p id="maxTemp" class="col">°C</p>
+                    <div class="row row-cols-2 gx-0">
+                      <strong id="minTemp" class="col p-3"> °C</strong>
+                      <p id="maxTemp" class="col p-3">°C</p>
                     </div>
                   </div>
                 </div>
                 <div class="col">
-                  <p id="weekday">Mon</p>
+                  <p id="weekday" class="day-of-week">Mon</p>
                   <img
                     src="//cdn.weatherapi.com/weather/64x64/night/296.png"
                     alt="Clear"
                     id="icon"
                   />
                   <div class="min-max-container">
-                    <div class="row row-cols-2">
-                      <strong id="minTemp" class="col"> °C</strong>
-                      <p id="maxTemp" class="col">°C</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col">
-                  <p id="weekday">Mon</p>
-                  <img
-                    src="//cdn.weatherapi.com/weather/64x64/night/296.png"
-                    alt="Clear"
-                    id="icon"
-                  />
-                  <div class="min-max-container">
-                    <div class="row row-cols-2">
-                      <strong id="minTemp" class="col"> °C</strong>
-                      <p id="maxTemp" class="col">°C</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col">
-                  <p id="weekday">Mon</p>
-                  <img
-                    src="//cdn.weatherapi.com/weather/64x64/night/296.png"
-                    alt="Clear"
-                    id="icon"
-                  />
-                  <div class="min-max-container">
-                    <div class="row row-cols-2">
-                      <strong id="minTemp" class="col"> °C</strong>
-                      <p id="maxTemp" class="col">°C</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col">
-                  <p id="weekday">Mon</p>
-                  <img
-                    src="//cdn.weatherapi.com/weather/64x64/night/296.png"
-                    alt="Clear"
-                    id="icon"
-                  />
-                  <div class="min-max-container">
-                    <div class="row row-cols-2">
-                      <strong id="minTemp" class="col"> °C</strong>
-                      <p id="maxTemp" class="col">°C</p>
+                    <div class="row row-cols-2 gx-0">
+                      <strong id="minTemp" class="col p-3"> 7°C</strong>
+                      <p id="maxTemp" class="col p-3">16°C</p>
                     </div>
                   </div>
                 </div>
@@ -177,6 +135,6 @@
         by Analivia Costa
       </small>
     </div>
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
   </body>
 </html>
