--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="weather-app-wrapper">
           <form id="search-form" class="mb-3">
             <div class="row">
-              <div class="col-9">
+              <div class="col-sm-9 col-12">
                 <input
                   type="search"
                   class="form-control"
@@ -35,7 +35,7 @@
                   autocomplete="off"
                 />
               </div>
-              <div class="col-3">
+              <div class="col-sm-3 col-12">
                 <input
                   value="Search"
                   type="submit"
@@ -50,7 +50,7 @@
           </div>
 
           <div class="row">
-            <div class="col-6">
+            <div class="col-md-6 col-12">
               <div class="d-flex weather-temperature">
                 <img
                   src="//cdn.weatherapi.com/weather/64x64/night/296.png"
@@ -68,7 +68,7 @@
                 <li id="current-condition">Cloudy</li>
               </ul>
             </div>
-            <div class="col-6">
+            <div class="col-md-6 col-12">
               <ul>
                 <li>Humidity: <span id="humidity"></span>%</li>
                 <li>Wind: <span id="wind"></span> km/h</li>
@@ -78,7 +78,7 @@
           <br />
           <div class="weather-forecast" id="forecast">
             <div class="container-forecast">
-              <div class="row row-cols-3">
+              <div class="row row-cols-sm-3 row-cols-1">
                 <div class="col">
                   <p id="weekday" class="day-of-week">Mon</p>
                   <img
@@ -126,15 +126,13 @@
           </div>
         </div>
       </div>
-      <small>
-        <a
-          href="https://github.com/analiviag/weather-application"
-          target="_blank"
-          >Open-source code</a
-        >
-        by Analivia Costa
-      </small>
     </div>
+    <small class="signature">
+      <a href="https://github.com/analiviag/weather-application" target="_blank"
+        >Open-source code</a
+      >
+      &nbsp;by Analivia Costa
+    </small>
     <script src="script.js" type="module"></script>
   </body>
 </html>
