add properties to the page with JS and fix CSS

--- a/index.html
+++ b/index.html
@@ -64,14 +64,20 @@
               </div>
 
               <ul>
+                <li class=>
+                 <strong>H:</strong>  <span id="high" class="high"></span> <strong>°C</strong>   &nbsp; <strong>L:</strong>
+                  <span id="low" class="low"></span><strong>°C</strong>
+                </li>
                 <li><span id="date-time">2025-03-28 11:20</span></li>
                 <li id="current-condition">Cloudy</li>
               </ul>
             </div>
             <div class="col-md-6 col-12">
               <ul>
+                <li><strong>Feels Like: </strong><span id="feels-like"></span><strong>°C</strong> </li>
                 <li>Humidity: <span id="humidity"></span>%</li>
                 <li>Wind: <span id="wind"></span> km/h</li>
+                <li>Precipitation: <span id="precipitation"></span>%</li>
               </ul>
             </div>
           </div>
