--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
               <ul>
                 <li class=>
-                 <strong>H:</strong>  <span id="high" class="high"></span> <strong>°C</strong>   &nbsp; <strong>L:</strong>
-                  <span id="low" class="low"></span><strong>°C</strong>
+                 <strong>H:</strong>  <span id="high" class="high"></span> <strong>°</strong>   &nbsp; <strong>L:</strong>
+                  <span id="low" class="low"></span><strong>°</strong>
                 </li>
                 <li><span id="date-time">2025-03-28 11:20</span></li>
                 <li id="current-condition">Cloudy</li>
@@ -74,7 +74,7 @@
             </div>
             <div class="col-md-6 col-12">
               <ul>
-                <li><strong>Feels Like: </strong><span id="feels-like"></span><strong>°C</strong> </li>
+                <li><strong>Feels Like: </strong><span id="feels-like"></span><strong>°</strong> </li>
                 <li>Humidity: <span id="humidity"></span>%</li>
                 <li>Wind: <span id="wind"></span> km/h</li>
                 <li>Precipitation: <span id="precipitation"></span>%</li>
@@ -94,8 +94,8 @@
                   />
                   <div class="min-max-container">
                     <div class="row row-cols-2 gx-0">
-                      <p id="minTemp" class="col p-3">7°C</p>
-                      <strong id="maxTemp" class="col p-3">°16C</strong>
+                      <p id="minTemp" class="col p-3">7°</p>
+                      <strong id="maxTemp" class="col p-3">16°</strong>
                     </div>
                   </div>
                 </div>
@@ -108,8 +108,8 @@
                   />
                   <div class="min-max-container">
                     <div class="row row-cols-2 gx-0">
-                      <strong id="minTemp" class="col p-3"> °C</strong>
-                      <p id="maxTemp" class="col p-3">°C</p>
+                      <strong id="minTemp" class="col p-3"> °</strong>
+                      <p id="maxTemp" class="col p-3">°</p>
                     </div>
                   </div>
                 </div>
@@ -122,8 +122,8 @@
                   />
                   <div class="min-max-container">
                     <div class="row row-cols-2 gx-0">
-                      <strong id="minTemp" class="col p-3"> 7°C</strong>
-                      <p id="maxTemp" class="col p-3">16°C</p>
+                      <strong id="minTemp" class="col p-3"> 7°</strong>
+                      <p id="maxTemp" class="col p-3">16°</p>
                     </div>
                   </div>
                 </div>
