--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather app</title>
+    <title>Weather Forecast App</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -46,7 +46,7 @@
           </form>
           <br />
           <div class="overview">
-            <h1 id="current-city">Vancouver</h1>
+            <h1 id="current-city"></h1>
           </div>
 
           <div class="row">
@@ -58,23 +58,31 @@
                   id="icon"
                 />
                 <div>
-                  <strong id="temperature">12</strong
+                  <strong id="temperature"></strong
                   ><span class="units"> °C </span>
                 </div>
               </div>
 
               <ul>
-                <li class=>
-                 <strong>H:</strong>  <span id="high" class="high"></span> <strong>°</strong>   &nbsp; <strong>L:</strong>
+                <li>
+                  <strong>H:</strong>
+                  <span id="high" class="high"></span>
+                  <strong>°</strong>
+                  &nbsp;
+                  <strong>L:</strong>
                   <span id="low" class="low"></span><strong>°</strong>
                 </li>
-                <li><span id="date-time">2025-03-28 11:20</span></li>
-                <li id="current-condition">Cloudy</li>
+
+                <li><span id="date-time"></span></li>
+                <li id="current-condition"></li>
               </ul>
             </div>
             <div class="col-md-6 col-12">
               <ul>
-                <li><strong>Feels Like: </strong><span id="feels-like"></span><strong>°</strong> </li>
+                <li>
+                  <strong>Feels Like: </strong><span id="feels-like"></span
+                  ><strong>°</strong>
+                </li>
                 <li>Humidity: <span id="humidity"></span>%</li>
                 <li>Wind: <span id="wind"></span> km/h</li>
                 <li>Precipitation: <span id="precipitation"></span>%</li>
@@ -86,44 +94,32 @@
             <div class="container-forecast">
               <div class="row row-cols-sm-3 row-cols-1">
                 <div class="col">
-                  <p id="weekday" class="day-of-week">Mon</p>
-                  <img
-                    src="//cdn.weatherapi.com/weather/64x64/night/296.png"
-                    alt="Clear"
-                    id="icon"
-                  />
+                  <p id="weekday" class="day-of-week"></p>
+                  <img src="" alt="" id="icon" />
                   <div class="min-max-container">
                     <div class="row row-cols-2 gx-0">
-                      <p id="minTemp" class="col p-3">7°</p>
-                      <strong id="maxTemp" class="col p-3">16°</strong>
+                      <p id="minTemp" class="col p-3"></p>
+                      <strong id="maxTemp" class="col p-3"></strong>
                     </div>
                   </div>
                 </div>
                 <div class="col">
-                  <p id="weekday" class="day-of-week">Mon</p>
-                  <img
-                    src="//cdn.weatherapi.com/weather/64x64/night/296.png"
-                    alt="Clear"
-                    id="icon"
-                  />
+                  <p id="weekday" class="day-of-week"></p>
+                  <img src="" alt="" id="icon" />
                   <div class="min-max-container">
                     <div class="row row-cols-2 gx-0">
-                      <strong id="minTemp" class="col p-3"> °</strong>
-                      <p id="maxTemp" class="col p-3">°</p>
+                      <strong id="minTemp" class="col p-3"></strong>
+                      <p id="maxTemp" class="col p-3"></p>
                     </div>
                   </div>
                 </div>
                 <div class="col">
-                  <p id="weekday" class="day-of-week">Mon</p>
-                  <img
-                    src="//cdn.weatherapi.com/weather/64x64/night/296.png"
-                    alt="Clear"
-                    id="icon"
-                  />
+                  <p id="weekday" class="day-of-week"></p>
+                  <img src="" alt="" id="icon" />
                   <div class="min-max-container">
                     <div class="row row-cols-2 gx-0">
-                      <strong id="minTemp" class="col p-3"> 7°</strong>
-                      <p id="maxTemp" class="col p-3">16°</p>
+                      <strong id="minTemp" class="col p-3"> </strong>
+                      <p id="maxTemp" class="col p-3"></p>
                     </div>
                   </div>
                 </div>
