--- a/index.html
+++ b/index.html
@@ -48,21 +48,17 @@
           <div class="overview">
             <h1 id="current-city"></h1>
           </div>
-
+          <br />
           <div class="row">
             <div class="col-md-6 col-12">
               <div class="d-flex weather-temperature">
-                <img
-                  src="//cdn.weatherapi.com/weather/64x64/night/296.png"
-                  alt="Clear"
-                  id="icon"
-                />
+                <img src="" alt="Clear" id="icon" />
                 <div>
                   <strong id="temperature"></strong
                   ><span class="units"> °C </span>
                 </div>
               </div>
-
+              <br />
               <ul>
                 <li>
                   <strong>H:</strong>
