--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                   <div class="min-max-container">
                     <div class="row row-cols-2 gx-0">
                       <p id="minTemp" class="col p-3"></p>
-                      <strong id="maxTemp" class="col p-3"></strong>
+                      <strong id="maxTemp" class="col p-3 max-temp"></strong>
                     </div>
                   </div>
                 </div>
@@ -104,8 +104,8 @@
                   <img src="" alt="" id="icon" />
                   <div class="min-max-container">
                     <div class="row row-cols-2 gx-0">
-                      <strong id="minTemp" class="col p-3"></strong>
-                      <p id="maxTemp" class="col p-3"></p>
+                      <p id="minTemp" class="col p-3"></p>
+                      <p id="maxTemp" class="col p-3 max-temp"></p>
                     </div>
                   </div>
                 </div>
@@ -114,8 +114,8 @@
                   <img src="" alt="" id="icon" />
                   <div class="min-max-container">
                     <div class="row row-cols-2 gx-0">
-                      <strong id="minTemp" class="col p-3"> </strong>
-                      <p id="maxTemp" class="col p-3"></p>
+                      <p id="minTemp" class="col p-3"></p>
+                      <p id="maxTemp" class="col p-3 max-temp"></p>
                     </div>
                   </div>
                 </div>
