--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                   <div class="min-max-container">
                     <div class="row row-cols-2 gx-0">
                       <p id="minTemp" class="col p-3"></p>
-                      <strong id="maxTemp" class="col p-3 max-temp"></strong>
+                      <p id="maxTemp" class="col p-3 max-temp"></p>
                     </div>
                   </div>
                 </div>
